# local-wikidata

./: .env.example  .gitignore  .woodpecker.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  docker-compose.yml  lefthook.yml  mise.toml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/: __init__.py  __main__.py  cli.py  config.py  database.py  importer.py  main.py  schema.py
backend/tests/: __init__.py  test_api.py  test_importer.py
docker/: Dockerfile.backend
frontend/: eslint.config.js  package.json
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
